# chani-rs

./: .gitignore  Cargo.toml  README.md
8088-tests-v2/: README.md
chani-projects/: cryo-dune-3.7-cd.chani  dnadp.chani
crates/bytes_ext/: Cargo.toml
crates/bytes_ext/src/: lib.rs  u16_ext.rs  u32_ext.rs
crates/chani_core/: Cargo.toml
crates/chani_core/src/: address.rs  clock.rs  color.rs  frame.rs  input_event.rs  key.rs  lib.rs  machine.rs  memory.rs  palette.rs  time.rs
crates/chani_core/src/bios/: int08_system_timer.rs  int09_keyboard.rs  int10_video.rs  mod.rs
crates/chani_core/src/cpu/: bitops.rs  cpu_impl.rs  flags.rs  mod.rs  register_file.rs
crates/chani_core/src/device/: keyboard.rs  mod.rs  opl3.rs  pic.rs  pit.rs  vga.rs
crates/chani_core/src/dos/: dos_alloc.rs  dos_exec.rs  dos_file.rs  environment.rs  (+6 more)
crates/chani_datafile/: Cargo.toml
crates/chani_datafile/src/: ast.rs  lib.rs  parser.rs
crates/chani_disasm/: Cargo.toml
crates/chani_disasm/src/: address_attributes.rs  attributes.rs  basic_block.rs  branch_map.rs  data_type.rs  decoded_instruction.rs  disassemble.rs  exe_mz.rs  layout.rs  lib.rs  listing_line.rs  opcode_table.rs  project.rs  seg_dataflow.rs  work_queue.rs
crates/chani_egui/: Cargo.toml
crates/chani_egui/src/: display_window.rs  key.rs  machine_runner.rs  main.rs
crates/disasm/: Cargo.toml
crates/disasm/src/: decoded_instruction.rs  disassemble.rs  lib.rs  memory_reference.rs  opcode_table.rs
src/: lib.rs
src/bus/: ibm5150_bus.rs  mod.rs  test_bus.rs
src/i8088/: cpu.rs  flags.rs  mod.rs  register_file.rs
(+2 files in other folders)
