[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.dependencies]
bytes_ext = { path = "crates/bytes_ext" }
chani_core = { path = "crates/chani_core" }
chani_egui = { path = "crates/chani_egui" }
disasm = { path = "crates/disasm" }
eframe = "0.32.0"
egui = "0.32.0"
flate2 = "1.1.2"
serde = { version = "1.0.221", features = ["derive"] }
serde_json = "1.0"
smallvec = "1.15.1"
