[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.lints.clippy]
collapsible-if = "allow"

[workspace.dependencies]
bytes_ext = { path = "crates/bytes_ext" }
chani_core = { path = "crates/chani_core" }
chani_datafile = { path = "crates/chani_datafile" }
chani_disasm = { path = "crates/chani_disasm" }
eframe = "0.34.0"
flate2 = "1.1.2"
nom = "8.0.0"
serde = { version = "1.0.221", features = ["derive"] }
serde_json = "1.0"
smallvec = { version = "1.15.1", features = ["const_generics", "union"] }
smallstr = { version = "0.3.1", features = ["union"] }